<resources>
    <string name="app_name">FitnessApp</string>
    <string name="AppLabel">SuperFit</string>
    <string name="registrationUserNameHint">UserName</string>
    <string name="registrationEmailHint">Email</string>
    <string name="registrationCodeHint">Code</string>
    <string name="registrationRepeatCodeHint">Repeat code</string>
    <string name="registrationButtonSignUp">Sign Up </string>
    <string name="registrationButtonSignIn">Sign In</string>
    <string name="signInTextUserName">UserName</string>
    <string name="signInSignUpButtonText">Sign Up </string>
    <string name="signInActivitySignIn">Sign In </string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="mainScreenMyBody">My Body</string>
    <string name="mainScreenDetailsButton">Details</string>
    <string name="mainScreenLastExercises">Last exercises</string>
    <string name="mainScreenSeeAllExercises">See all </string>
    <string name="mainScreenRecipes">Recipes </string>
    <string name="mainScreenSignOut"> Sign Out</string>
    <string name="searchHint">Search...</string>
    <string name="recipesButtonBalanced">Balanced</string>
    <string name="recipesButtonHighFiber">High-Fiber</string>
    <string name="recipesButtonHighProtein">High-Protein</string>
    <string name="recipeActivityEatName">Test eat</string>
    <string name="recipeActivityIngredients">Ingredients</string>
    <string name="pushUps">Push-Ups</string>
    <string name="pushUpsDescription">Push-ups exercise the pectoral muscles, triceps, and anterior deltoids.</string>
    <string name="plank">Plank</string>
    <string name="plankDescription">The plank strengthens the abdominals, back and shoulders. </string>
    <string name="exercises">Exercises</string>
    <string name="squats">Squats</string>
    <string name="squatsDescription">Сonsidered a vital exercise for increasing the strength and size of the lower body.</string>
    <string name="running">Running</string>
    <string name="runningDescription">It develops endurance, strengthens the legs and the cardiovascular system.</string>
    <string name="timerStart">Start</string>
    <string name="myBody">My Body</string>
    <string name="edit">Edit</string>
    <string name="myProgress">My Progress</string>
    <string name="seeAll">See all</string>
    <string name="trainProgress">Train Progress</string>
    <string name="statistics">Statistics</string>
    <string name="weight">Weight</string>
    <string name="training">Training</string>
    <string name="crunch">Crunch</string>
    <string name="crunchDescription">It involves the entire abs, but primarily it works the rectus abdominis muscle.</string>
    <string name="march2019">March 2019</string>
    <string name="july2019">July 2019</string>
    <string name="jan2020">Jan 2020</string>
    <string name="lastTrainPushUps">Last train: 35 push-ups</string>
    <string name="progress15percent">Progress: 15%</string>
    <string name="lastTrain45Seconds">Last train: 45 seconds</string>
    <string name="progressMinus8percent">Progress: -8%</string>
    <string name="lastTrain45times">Last train: 45 times</string>
    <string name="progress24percent">Progress: 24%</string>
    <string name="lastTrain30Times">Last train: 30 times</string>
    <string name="progress5percent">Progress: 5%</string>
    <string name="lastTrain1500meters">Last train: 1500 meters</string>
</resources>